ewarehouse-apex/api/src/objects/Commodities__c.object
<CustomObject>
    <fields>
        <fullName>Effective_date__c</fullName>
        <description>The date from which the entered prices are effective. A price for the same commodity with a later date will supersede any previous prices.</description>
        <inlineHelpText>Enter the date from which these prices will be effective for this commodity. A price for the same commodity with a later date will supersede any previous prices.</inlineHelpText>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Farmer_Crop__c</fullName>
        <description>Picklist used in the e-Warehouse to make sure the user only fills in values which are used in the Farmer Registration</description>
        <label>Farmer Crop</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Potatoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groundnuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorghum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Retail_Price__c</fullName>
        <label>Highest Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_Wholesale_Price__c</fullName>
        <label>Highest Wholesale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lowest_Retail_Price__c</fullName>
        <label>Lowest Retail Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lowest_Wholesale_Price__c</fullName>
        <label>Lowest Wholesale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Markets__c</referenceTo>
        <relationshipLabel>Commodities</relationshipLabel>
        <relationshipName>Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commodities</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>